--- a/index.html
+++ b/index.html
@@ -94,5 +94,52 @@
 </div>
 
 
+
+<div class="">
+  <h3>5600</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=5600" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>5700</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=5700" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>6800</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=6800" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>6900</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=6900" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>3060</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=3060" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>3070</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=3070" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>3080</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=3080" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>3090</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=3090" width="1200" height="500"></iframe>
+</div>
+
+<div class="">
+  <h3>1000w</h3>
+  <iframe src="https://www.hardgamers.com.ar/search?text=1000w" width="1200" height="500"></iframe>
+</div>
+
+
 </body>
 </html>
