--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<style>
+body {
+  width: 100%;
+  padding-right: 500px;
+}
+
+
+
+</style>
+</head>
+
 <body>
+
+  <div>
+
 
 <div class="">
   <h3>5600</h3>
@@ -140,6 +156,6 @@
   <iframe src="https://www.hardgamers.com.ar/search?text=1000w" width="1200" height="500"></iframe>
 </div>
 
-
+</div>
 </body>
 </html>
